update SQLAlchemy etc.
address sql injection in order_by (CVE-2019-7164), group_by (CVE-2019-7548)

--- a/Pipfile
+++ b/Pipfile
@@ -20,8 +20,7 @@ Genshi = "*"
 Paste = "*"
 PasteDeploy = "==2.0.1"
 PasteScript = "==1.7.5"
-# stay on stable
-SQLAlchemy = "==1.2.15"
+SQLAlchemy = ">=1.3.0"
 cx-Oracle = "*"
 pyramid_mailer = "*"
 PySimpleSOAP = "*"
