update requirements.txt for waitress, sqlalchemy alerts
 - pin ldap, Oracle (from conda)
 - waitress==1.4.4 to address GHSA-968f-66r5-5v74, GHSA-m5ff-3wj3-8ph4
 - sqlalchemy==1.3.18 to address CVE-2019-7164, CVE-2019-7548

--- a/Pipfile
+++ b/Pipfile
@@ -14,14 +14,16 @@ tox = "*"
 # need python2 support
 injector = "==0.12.0"
 pyramid = "*"
-python-ldap = "*"
+# from conda
+python-ldap = "==3.2.0"
 docopt = "*"
 Genshi = "*"
 Paste = "*"
 PasteDeploy = "==2.0.1"
 PasteScript = "==1.7.5"
 SQLAlchemy = ">=1.3.0"
-cx-Oracle = "*"
+# from conda
+cx-Oracle = "==7.2.3"
 pyramid_mailer = "*"
 PySimpleSOAP = "*"
 PyMySQL = "*"
